--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,16 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="primary_button">
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="secondary_button">
+        <item name="android:background">@drawable/rounded_empty_button</item>
+        <item name="android:textColor">@color/purple_500</item>
+    </style>
+
     <style name="Theme.ImageGalleryChallenge.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ImageGalleryChallenge.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
