--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,21 +8,6 @@
     <fragment
         android:id="@+id/GalleryFragment"
         android:name="com.x.imagegallerychallenge.ui.gallery.GalleryFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_gallery">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.x.imagegallerychallenge.ui.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/GalleryFragment" />
-    </fragment>
+        android:label="@string/gallery_fragment"
+        tools:layout="@layout/fragment_gallery" />
 </navigation>
