--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,16 @@
     <style name="Theme.ImageGalleryChallenge.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ImageGalleryChallenge.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.ImageGalleryChallenge.Fullscreen" parent="Theme.ImageGalleryChallenge">
+        <item name="android:actionBarStyle">
+            @style/Widget.Theme.ImageGalleryChallenge.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.ImageGalleryChallenge.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
